tests/baselines/reference/generatorTypeCheck8.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck8.ts(2,17): error TS2322: Type 'Generator<string, any, undefined>' is not assignable to type 'BadGenerator'.
  Types of property 'next' are incompatible.
    Type '{ (this: Generator<string, any, void>, ...args: [] | [undefined]): IteratorResult<string, any>; (args_0: undefined): IteratorResult<string, any>; }' is not assignable to type '{ (this: Iterator<number, any, void>, ...args: [] | [undefined]): IteratorResult<number, any>; (args_0: undefined): IteratorResult<number, any>; }'.
      The 'this' types of each signature are incompatible.
        Property '[Symbol.iterator]' is missing in type 'Iterator<number, any, void>' but required in type 'Generator<string, any, void>'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck8.ts (1 errors) ====
    interface BadGenerator extends Iterator<number>, Iterable<string> { }
    function* g3(): BadGenerator { }
                    ~~~~~~~~~~~~
!!! error TS2322: Type 'Generator<string, any, undefined>' is not assignable to type 'BadGenerator'.
!!! error TS2322:   Types of property 'next' are incompatible.
!!! error TS2322:     Type '{ (this: Generator<string, any, void>, ...args: [] | [undefined]): IteratorResult<string, any>; (args_0: undefined): IteratorResult<string, any>; }' is not assignable to type '{ (this: Iterator<number, any, void>, ...args: [] | [undefined]): IteratorResult<number, any>; (args_0: undefined): IteratorResult<number, any>; }'.
!!! error TS2322:       The 'this' types of each signature are incompatible.
!!! error TS2322:         Property '[Symbol.iterator]' is missing in type 'Iterator<number, any, void>' but required in type 'Generator<string, any, void>'.
!!! related TS2728 /.ts/lib.es2015.generator.d.ts:29:5: '[Symbol.iterator]' is declared here.